--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
-    "subpackage": "file:subpackage"
-  },
+  "workspaces": [
+    "./subpackage"
+  ],
   "keywords": [],
   "author": "",
   "license": "ISC"
